ClassMethod PostCharacter(name As %String, class As %String, race As %String, level As %String) As %DynamicObject

--- a/src/ttrpg/Character.cls
+++ b/src/ttrpg/Character.cls
@@ -17,4 +17,34 @@ ClassMethod GetCharByName(name As %String) As TTRPG.Character
 
     Quit character
 }
+
+ClassMethod PostCharacter(name As %String, class As %String, race As %String, level As %String) As %DynamicObject
+{
+    set results = {} // create the return %DynamicObject
+
+    //create the character object
+    set char = ##class(TTRPG.Character).%New()
+
+    set char.Name = name
+    set char.Class = class
+    set char.Race = race
+    set char.Level = level
+    set st = char.%Save()
+
+    if st {
+        set charInfo = {}
+        set charInfo.Name = char.Name
+        set charInfo.Class = char.Class
+        set charInfo.Race = char.Race
+        set charInfo.Level = char.Level
+        set results.Character = charInfo
+        Set results.Status = "success"
+    }
+    else {
+        Set results.Status = "error"
+        Set results.Message = "Unable to create the character"
+    }
+    Quit results
+}
+
 }
